# Fathom-Simple-MCP

./: .gitignore  README.md  config.py  fathom_client.py  pyproject.toml  requirements.txt  server.py  utils.py
tools/: meetings.py  recordings.py  search.py  team_members.py  teams.py
