[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fathom-mcp"
version = "0.1.0"
description = "MCP server for accessing Fathom AI meeting recordings, transcripts, summaries, teams, and team members."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Fathom MCP Developer", email = "druellan@ecimtech.com"}
]
keywords = ["fathom", "mcp", "meetings", "transcripts", "summaries"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "fastmcp>=2.12.3",
    "httpx>=0.28.1",
    "python-toon>=0.1.0",
    "strip-markdown>=1.0.0",
]

[project.scripts]
fathom-mcp = "server:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "fathom_client.py:__version__"
]
tag_format = "v$version"
bump_message = "chore(release): bump version to $current_version → $new_version"

[tool.commitizen.customize]
message_template = "{prefix}({scope}): {subject}"
example = "feat(api): add new endpoint for meeting summaries"
schema = "<type>(<scope>): <subject>"

[tool.commitizen.types]
feat = "A new feature"
fix = "A bug fix"
docs = "Documentation only changes"
style = "Changes that do not affect the meaning of the code (white-space, formatting, missing semi-colons, etc)"
refactor = "A code change that neither fixes a bug nor adds a feature"
perf = "A code change that improves performance"
test = "Adding missing tests or correcting existing tests"
build = "Changes that affect the build system or external dependencies (example scopes: uv, pip)"
ci = "Changes to our CI configuration files and scripts (example scopes: GitHub Actions)"
chore = "Other changes that don't modify src or test files"
revert = "Reverts a previous commit"

[dependency-groups]
dev = []
